# wally-trader

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  DAILY_TRADING_JOURNAL.md  MORNING_PROMPT.md  Makefile  README.md  SETUP_WEBAPP.md  opencode.json  pytest.ini  setup.py  setup.sh
.claude/: .env.example  active_profile  agents  commands  settings.json  skills
.opencode/: config.json
api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/app/: __init__.py  deps.py  main.py
api/app/agents/: __init__.py  base.py  journal.py  multifactor.py  regime.py  risk.py  sentiment.py  signal_validator.py
api/app/api/v1/: __init__.py  agents.py  equity.py  keys.py  profiles.py  signals.py
api/app/core/: config.py  logging.py
api/app/db/: base.py  session.py
api/app/llm_gateway/: __init__.py  anthropic_client.py  base_client.py  google_client.py  ollama_client.py  openai_client.py  pricing.py  router.py  schemas.py
api/app/models/: __init__.py  agent_run.py  api_key.py  audit_log.py  equity_point.py  journal_entry.py  profile.py  signal.py  subscription.py  trade_broker_sync.py  usage_event.py  user.py
api/app/schemas/: agent.py  equity.py  key.py  profile.py  signal.py
api/app/security/: encryption.py  key_service.py
api/app/services/: metrics.py
api/scripts/: bootstrap_db.py  create_dev_user.py  migrate_local_to_db.py
api/tests/: conftest.py  test_docs_in_sync.py  test_encryption.py  test_generate_stubs.py  test_llm_gateway_stream.py  test_pricing.py
docs/: NOTION_SETUP.md  PHASE1_RUNBOOK.md  README_MAC_INTEL.md  backtest_findings_2026-04-30.md  backtest_findings_2026-05-05_punk_smart_v2.md  (+8 more)
shared/wally_core/: pyproject.toml
shared/wally_core/src/wally_core/: composite.py  dashboard_server.py  discipline.py  health.py  macro.py  multifactor.py
shared/wally_core/src/wally_core/dashboard/: app.js  index.html  style.css
shared/wally_core/src/wally_core/learning/: __init__.py  adaptive_weights.py  drift_response.py  online_ml_retrain.py  override_tracker.py  pattern_miner.py  post_mortem.py  recommendation_log.py  strategy_refresh.py
shared/wally_core/src/wally_core/memory/: local.py  notion_schema.py
shared/wally_core/tests/: conftest.py  test_dashboard_endpoints.py  test_discipline.py  test_extreme_momentum_fade.py  test_fot_scout.py  test_funding_alerts.py  test_health.py  test_hmm_backtest.py  test_hmm_e2e.py  test_hmm_features.py  test_hmm_fetcher.py  test_hmm_integration.py  test_hmm_labeling.py  test_hmm_model.py  test_hmm_reporting.py  test_hmm_suggest.py  test_liq_heatmap.py  test_macro.py  test_multifactor.py  test_source_grader.py  test_strategy_distill.py  test_win_streak_advice.py
shared/wally_core/tests/learning/: test_adaptive_weights.py  test_drift_response.py  test_online_ml_retrain.py  test_override_tracker.py  test_pattern_miner.py  test_post_mortem.py  test_recommendation_log.py  test_strategy_refresh.py
shared/wally_core/tests/memory/: test_local.py
wally-trader-mcp/: pyproject.toml
wally-trader-mcp/src/wally_trader_mcp/: __init__.py  server.py
wally-trader-mcp/src/wally_trader_mcp/tools/: correlation_report.py  hunt_signals.py  journal_close.py  levels_now.py  log_outcome.py  macross_signal.py  signal_validate.py  tilt_check.py
wally-trader-mcp/tests/: test_tools_write.py
(+677 files in other folders)
