[project]
name = "wally-api"
version = "0.1.0"
description = "Wally Trader backend API — FastAPI + SQLAlchemy + LLM Gateway"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Jose Campos" }]
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.3",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Cache + queue
    "redis>=5.2.0",
    "arq>=0.26.1",

    # Validation / settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Security
    "cryptography>=44.0.0",
    "passlib[argon2]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",

    # Auth (Clerk JWT verification)
    "pyjwt>=2.10.0",
    "httpx>=0.28.0",

    # LLM SDKs
    "anthropic>=0.40.0",
    "openai>=1.57.0",
    "google-generativeai>=0.8.3",
    "ollama>=0.4.4",

    # Billing
    "stripe>=11.4.0",

    # Observability
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.19.0",

    # Reuse wally_core (installed as editable from monorepo)
    "wally-core",
]

[tool.uv.sources]
wally-core = { path = "../shared/wally_core", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "vcrpy>=6.0.2",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "T20", "RET", "SIM", "ARG"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
