[project]
name = "wally-core"
version = "0.1.0"
description = "Wally Trader shared logic library"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "filelock>=3.13",
    "pyyaml>=6.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dashboard = ["fastapi>=0.100", "uvicorn>=0.23", "httpx>=0.24"]
notion = ["notion-client>=2.2"]
test = ["pytest>=8.0", "pytest-cov>=4.1", "vcrpy>=6.0", "freezegun>=1.4", "httpx>=0.24"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not network'"
markers = [
    "network: tests that require external network access (skipped by default)",
]
